--- a/src/design/theme/_board-planning.scss
+++ b/src/design/theme/_board-planning.scss
@@ -148,10 +148,6 @@ header {
     line-height: $list-header-height;
     .editColumn {
         line-height: 12px !important;
-        .custom-control-label::before,
-        .custom-control-label::after {
-            top: 0px;
-        }
     }
     small {
         line-height: 1.3 !important;
