--- a/src/design/theme/_custom.scss
+++ b/src/design/theme/_custom.scss
@@ -260,13 +260,6 @@
         padding-left: 2px;
     }
     
-    .custom-control-label {
-        position: relative;
-        margin-bottom: 0;
-        vertical-align: top;
-        line-height: 23px;
-    }
-    
     .stage-workflow-title {
         .fa,
         .fas {
@@ -739,13 +732,6 @@
             //padding: 60px 60px;
             box-shadow: none !important;
         }
-    }
-    
-    .custom-control {
-        position: relative;
-        display: block;
-        height: 0;
-        padding-left: 1.5rem;
     }
     
     .input-group-search {
