--- a/src/design/theme/_inputs.scss
+++ b/src/design/theme/_inputs.scss
@@ -67,12 +67,6 @@ textarea::placeholder {
     }
 }
 
-.custom-control-input:checked~.custom-control-label::before {
-    color: #fff;
-    border-color: #464DEE;
-    background-color: #464DEE;
-}
-
 .mx-input {
     border: 1px solid #e9e9e9 !important;
     box-shadow: inset 0 0 0 transparent !important;
